--- a/Source/Client/FlightBooking_Android/app/src/main/res/values/strings.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">FlightBooking</string>
+    <string name="str_round_trip">Round Trip</string>
+    <string name="str_one_way">One Way</string>
+    <string name="str_slogan">Smart search. Made simple</string>
+    <string name="str_adults">Adults</string>
+    <string name="str_children">Children</string>
+    <string name="str_search">Search</string>
 </resources>
